// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderPromo component renders correctly for desktop 1`] = `
<div
  className="header-promo__container header-promo-desktop"
>
  <Styled(Row)
    centered={true}
    className="header__promo-area--desktop"
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 4,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Anchor)
        className="header-promo__item"
        data-locator="global_promobannerimg"
        target=""
        to="/banner/url1"
      >
        <div
          className="header-promo-item__icon orange-schedule"
        >
          <Styled(Image)
            alt=""
            src="/static/images/clock-icon.svg"
          />
        </div>
        <div
          className="header-promo-item__content"
        >
          <Styled(BodyCopy)
            className="styled-text black-bold"
            color="text.primary"
            component="p"
            dataLocator=""
            fontFamily="secondary"
            fontSize={
              Array [
                "fs12",
                "fs12",
                "fs14",
              ]
            }
            fontWeight="black"
            letterSpacing="normal"
            lineHeight="normal"
            textAlign="center"
          >
            NEED IT NOW?
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className="styled-text-line style2"
            color="text.primary"
            component="p"
            dataLocator=""
            fontFamily="secondary"
            fontSize={
              Array [
                "fs12",
                "fs12",
                "fs14",
              ]
            }
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            textAlign="center"
          >
            Buy online, pickup in store.
          </Styled(BodyCopy)>
        </div>
      </Styled(Anchor)>
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 4,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Anchor)
        className="header-promo__item"
        data-locator="global_promobannerimg"
        target=""
        to="/banner/url2"
      >
        <div
          className="header-promo-item__icon green-dollar"
        >
          <Styled(Image)
            alt=""
            src="/static/images/dollar-sign-icon.svg"
          />
        </div>
        <div
          className="header-promo-item__content"
        >
          <Styled(BodyCopy)
            className="styled-text green-bold"
            color="text.primary"
            component="p"
            dataLocator=""
            fontFamily="secondary"
            fontSize={
              Array [
                "fs12",
                "fs12",
                "fs14",
              ]
            }
            fontWeight="black"
            letterSpacing="normal"
            lineHeight="normal"
            textAlign="center"
          >
            EARN PLACE CASH!
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className="styled-text-line style2"
            color="text.primary"
            component="p"
            dataLocator=""
            fontFamily="secondary"
            fontSize={
              Array [
                "fs12",
                "fs12",
                "fs14",
              ]
            }
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            textAlign="center"
          >
            Get 10$ for every 20$ spent today.
          </Styled(BodyCopy)>
        </div>
      </Styled(Anchor)>
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 4,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Anchor)
        className="header-promo__item"
        data-locator="global_promobannerimg"
        target=""
        to="/node/modal/rr1"
      >
        <div
          className="header-promo-item__icon blue-email"
        >
          <Styled(Image)
            alt=""
            src="/static/images/at-icon.svg"
          />
        </div>
        <div
          className="header-promo-item__content"
        >
          <Styled(BodyCopy)
            className="styled-text black-bold"
            color="text.primary"
            component="p"
            dataLocator=""
            fontFamily="secondary"
            fontSize={
              Array [
                "fs12",
                "fs12",
                "fs14",
              ]
            }
            fontWeight="black"
            letterSpacing="normal"
            lineHeight="normal"
            textAlign="center"
          >
            SIGN UP AND GET 10$ OFF!
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className="styled-text-line style2"
            color="text.primary"
            component="p"
            dataLocator=""
            fontFamily="secondary"
            fontSize={
              Array [
                "fs12",
                "fs12",
                "fs14",
              ]
            }
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            textAlign="center"
          >
            &lt;u&gt;ENTER YOUR EMAIL&lt;/u&gt;.
          </Styled(BodyCopy)>
        </div>
      </Styled(Anchor)>
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`HeaderPromo component renders correctly for mobile 1`] = `
<div
  className="header-promo__container header-promo-mobile"
>
  <errorBoundaryComponent
    carouselConfig={
      Object {
        "arrow": "small",
        "type": "light",
      }
    }
    carouselTheme="dark"
    className="header__promo-area--mobile"
    options={
      Object {
        "CAROUSEL_FADE_OPTIONS": Object {
          "arrows": false,
          "autoplay": true,
          "autoplaySpeed": 3000,
          "fade": true,
          "infinite": true,
          "responsive": Array [
            Object {
              "breakpoint": NaN,
              "settings": Object {
                "arrows": false,
              },
            },
          ],
          "slidesToScroll": 1,
          "slidesToShow": 1,
          "speed": 500,
        },
        "CAROUSEL_OPTIONS": Object {
          "autoplaySpeed": 6000,
          "speed": 500,
        },
      }
    }
  >
    <Styled(Anchor)
      className="header-promo__item"
      data-locator="global_promobannerimg"
      target=""
      to="/banner/url1"
    >
      <div
        className="header-promo-item__icon orange-schedule"
      >
        <Styled(Image)
          alt=""
          src="/static/images/clock-icon.svg"
        />
      </div>
      <div
        className="header-promo-item__content"
      >
        <Styled(BodyCopy)
          className="styled-text black-bold"
          color="text.primary"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize={
            Array [
              "fs12",
              "fs12",
              "fs14",
            ]
          }
          fontWeight="black"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="center"
        >
          NEED IT NOW?
        </Styled(BodyCopy)>
        <Styled(BodyCopy)
          className="styled-text-line style2"
          color="text.primary"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize={
            Array [
              "fs12",
              "fs12",
              "fs14",
            ]
          }
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="center"
        >
          Buy online, pickup in store.
        </Styled(BodyCopy)>
      </div>
    </Styled(Anchor)>
    <Styled(Anchor)
      className="header-promo__item"
      data-locator="global_promobannerimg"
      target=""
      to="/banner/url2"
    >
      <div
        className="header-promo-item__icon green-dollar"
      >
        <Styled(Image)
          alt=""
          src="/static/images/dollar-sign-icon.svg"
        />
      </div>
      <div
        className="header-promo-item__content"
      >
        <Styled(BodyCopy)
          className="styled-text green-bold"
          color="text.primary"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize={
            Array [
              "fs12",
              "fs12",
              "fs14",
            ]
          }
          fontWeight="black"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="center"
        >
          EARN PLACE CASH!
        </Styled(BodyCopy)>
        <Styled(BodyCopy)
          className="styled-text-line style2"
          color="text.primary"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize={
            Array [
              "fs12",
              "fs12",
              "fs14",
            ]
          }
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="center"
        >
          Get 10$ for every 20$ spent today.
        </Styled(BodyCopy)>
      </div>
    </Styled(Anchor)>
    <Styled(Anchor)
      className="header-promo__item"
      data-locator="global_promobannerimg"
      target=""
      to="/node/modal/rr1"
    >
      <div
        className="header-promo-item__icon blue-email"
      >
        <Styled(Image)
          alt=""
          src="/static/images/at-icon.svg"
        />
      </div>
      <div
        className="header-promo-item__content"
      >
        <Styled(BodyCopy)
          className="styled-text black-bold"
          color="text.primary"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize={
            Array [
              "fs12",
              "fs12",
              "fs14",
            ]
          }
          fontWeight="black"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="center"
        >
          SIGN UP AND GET 10$ OFF!
        </Styled(BodyCopy)>
        <Styled(BodyCopy)
          className="styled-text-line style2"
          color="text.primary"
          component="p"
          dataLocator=""
          fontFamily="secondary"
          fontSize={
            Array [
              "fs12",
              "fs12",
              "fs14",
            ]
          }
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="center"
        >
          &lt;u&gt;ENTER YOUR EMAIL&lt;/u&gt;.
        </Styled(BodyCopy)>
      </div>
    </Styled(Anchor)>
  </errorBoundaryComponent>
</div>
`;
